--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="js/bootstrap.min.js"></script>
 
-<title>Title of the document</title>
+<title>Pablo Arango</title>
 </head>
 
 <body>
-The content of the document......
+BODYYYY
 </body>
 
 </html>
