--- a/index.html
+++ b/index.html
@@ -10,12 +10,26 @@
 <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
 <!-- Latest compiled and minified JavaScript -->
+<script type="text/javascript" src="js/_dependent/greensock/TweenMax.min.js"></script>
+<script type="text/javascript" src="js/_dependent/greensock/plugins/ScrollToPlugin.min.js"></script>
+<script type="text/javascript" src="js/_dependent/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="js/_mobile/iscroll.js"></script>
+<script type="text/javascript" src="js/jquery.scrollmagic.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script>
+$( document ).ready(function() {
+    console.log( "ready!" );
+
+});
+
+</script>
 
 <title>Pablo Arango</title>
 </head>
 
 <body>
+	
+<h1 id = "aa">H1</h1>
 BODYYYY
 </body>
 
