--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     <script type="text/javascript" src="js/_dependent/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="js/_mobile/iscroll.js"></script>
     <script type="text/javascript" src="js/jquery.scrollmagic.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
     <script>
       $( document ).ready(function() {
