renamed mobile folder in js

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <!-- SCRIPT -->
-    <script type="text/javascript" src="js/_dependent/greensock/TweenMax.min.js"></script>
-    <script type="text/javascript" src="js/_dependent/greensock/plugins/ScrollToPlugin.min.js"></script>
-    <script type="text/javascript" src="js/_dependent/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="js/_mobile/iscroll.js"></script>
+    <script type="text/javascript" src="js/dependent/greensock/TweenMax.min.js"></script>
+    <script type="text/javascript" src="js/dependent/greensock/plugins/ScrollToPlugin.min.js"></script>
+    <script type="text/javascript" src="js/dependent/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="js/mobile/iscroll.js"></script>
     <script type="text/javascript" src="js/jquery.scrollmagic.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
