--- a/index.html
+++ b/index.html
@@ -63,12 +63,17 @@
       </div><!--/.container-fluid -->
     </div>
     <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
+    <div class="jumbotron">
+       <div style= "text-align:center;">
         <h1>Pablo Arango</h1>
         <p>This example is to test everything works</p>
         <p>
-          <a class="btn btn-lg btn-default"role="button"> BUTTONSS &raquo;</a>
+          <a class="btn btn-lg btn-default"role="button">Scroll Down &raquo;</a>
         </p>
+        <p style="padding: 80px;"></p>
+      </div>
+
+
 
     <div class="container">  
    
