--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html style = "height:100%;" lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,17 +15,24 @@
 
     <style>
       .red{
-      color: #d3222a;
+        color: #d3222a;
       }
       .gray{
-      color: #333;
+        color: #333;
       }
       .hbold{
-      width: 80%;
+        width: 80%;
+      }
+      .medellinback{
+        height: 100%;
+        background-image:url(../img/medellin.jpg);
+        background-position: center;
+        background-size: cover;
+        opacity: 0.5;
       }
     </style>
   </head>
-  <body>
+  <body style = "height:100%;" >
 
     <!-- Navbar -->
     <div id="navbar" class="navbar navbar-default navbar-fixed-top container" role="navigation">
@@ -63,14 +70,14 @@
       </div><!--/.container-fluid -->
     </div>
     <!-- Main component for a primary marketing message or call to action -->
-    <div class="jumbotron">
+
+    <div class="jumbotron medellinback" style="height:100%;">
        <div style= "text-align:center;">
         <h1>Pablo Arango</h1>
         <p>This example is to test everything works</p>
         <p>
-          <a class="btn btn-lg btn-default"role="button">Scroll Down &raquo;</a>
+          <a class="btn btn-lg btn-primary"role="button">Scroll Down &raquo;</a>
         </p>
-        <p style="padding: 80px;"></p>
       </div>
 
 
