will be rewritten

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style = "height:100%;" lang="en">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,126 +7,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Pablo Arango</title> 
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="css/bootstrap.css">
-
-
-    <style>
-      .red{
-        color: #d3222a;
-      }
-      .gray{
-        color: #333;
-      }
-      .hbold{
-        width: 80%;
-      }
-      .medellinback{
-        height: 100%;
-        background-image:url(../img/medellin.jpg);
-        background-position: center;
-        background-size: cover;
-        opacity: 0.5;
-      }
-    </style>
+    <title>Pablo's Site</title> 
   </head>
-  <body style = "height:100%;" >
-
-    <!-- Navbar -->
-    <div id="navbar" class="navbar navbar-default navbar-fixed-top container" role="navigation">
-      <div class="container-fluid"> 
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"><b><text class= "red">PABLO</text>ARANGO</b></a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Link</a></li>
-            <li class="dropup">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li id = "default" class="active"><a href="#">Default</a></li>
-            <li id ="alternate"><a href="#">Alternate</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div><!--/.container-fluid -->
-    </div>
-    <!-- Main component for a primary marketing message or call to action -->
-
-    <div class="jumbotron medellinback" style="height:100%;">
-       <div style= "text-align:center;">
-        <h1>Pablo Arango</h1>
-        <p>This example is to test everything works</p>
-        <p>
-          <a class="btn btn-lg btn-primary"role="button">Scroll Down &raquo;</a>
-        </p>
-      </div>
-
-
-
-    <div class="container">  
-   
-    </div>
-
-    
-
-
-    <!-- Latest compiled and minified JavaScript -->
-    <!-- SCRIPT -->
-    <script type="text/javascript" src="js/dependent/greensock/TweenMax.min.js"></script>
-    <script type="text/javascript" src="js/dependent/greensock/plugins/ScrollToPlugin.min.js"></script>
-    <script type="text/javascript" src="js/dependent/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="js/mobile/iscroll.js"></script>
-    <script type="text/javascript" src="js/jquery.scrollmagic.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-
-    <script>
-      $( document ).ready(function() {
-        console.log( "ready!" );
-
-        $(".navbar").css("opacity","0");
-        $(".jumbotron").css("opacity","0");
-
-        setTimeout(function() {   
-        $(".jumbotron").fadeTo(1000,1)}, 500);
-
-        setTimeout(function() {   
-        $(".navbar").fadeTo(1000,1)}, 500);
-
-        $("#alternate").on("click",function(){
-          $("#navbar").addClass("navbar-inverse");
-          $("#navbar").removeClass("navbar-default");
-          $("#default").removeClass("active");
-          $("#alternate").addClass("active");
-        });
-
-        $("#default").on("click",function(){
-          $("#navbar").removeClass("navbar-inverse");
-          $("#navbar").addClass("navbar-default");
-          $("#alternate").removeClass("active");
-          $("#default").addClass("active");
-        });
-      });
-
-    </script>
+  <body >
+  <h1>Under Construction</h1>
   </body>
 </html>
